Spike: validate Java 25 vthread cooperative runtime (design §10.1)
Throwaway prototype proving the single-baton vthread coroutine model before the
PA–PF investment. All 5 spike steps pass on JDK 25.0.3 (no preview flags); also
builds/passes on JDK 21.

- step 0: StructuredTaskScope still preview on JDK 25 (javac fails without
  --enable-preview) -> hand-roll multi confirmed, zero preview deps.
- step 1: Coop/scheduler -- baton, state machine, wake timer, deterministic
  round-robin (ABCABCABC stable over 30 stress runs).
- step 2: recursive tree-walk suspends anywhere in the call stack -- x=f(),
  a+f(), return f() (sleep buried 2 frames deep) all overlap ~1x, not serial ~4x.
- step 3: Coop.blocking removes async statement-replay -- leading side effect
  runs exactly once (v1 runs it twice).
- step 4: hand-rolled multi -- {status,ok,value} format, live monitor reads,
  monitor final tick ordered before parent resume, top-level global write blocked.

Code-review fixes folded in:
- Coop.blocking re-acquires the baton via try/finally even when the blocking
  call throws (check 5 regression; otherwise the fiber completes off-baton and
  deadlocks).
- multi waits for the monitor's final tick (parentPending = workers + monitor)
  so fixture-56 ordering holds.
- purity claim scoped to top-level writes; nested COW/deepCopy deferred to the
  value layer (PA–PE).
- run.sh stress [N] automates the 30x determinism check.

Docs: docs/spike-findings.md (go/no-go), spike/README.md. CLAUDE.md status ->
spike passed, next task PA. AGENTS.md left untracked (not authored here).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>